--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,29 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
 }
 
 a {
   color: #00B7FF;
+}
+
+section{
+  color: white;
+  background-color: rgb(39, 39, 67);
+  margin-bottom:20px;
+  padding: 10px;
+  border: 3px solid black;
+  border-radius: 20px;
+}
+
+
+#wrapper {
+  background-color: rgb(128, 128, 203);
+  border-radius: 20px;
+  border: 8px solid black;
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
+  height: 1200px;
+  padding: 1%;
 }
