--- a/server/views/tickets/add.ejs
+++ b/server/views/tickets/add.ejs
@@ -11,23 +11,23 @@
             <form class="form" method="POST" action="/tickets/add">
                 <div class="form-group">
                     <label for="nameTextField">Assignment Title</label>
-                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter Title" name="Title" required>
+                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter Title" name="name" required>
                 </div>
                 <div class="form-group">
-                    <label for="nameTextField">Class</label>
-                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter Title" name="Title" required>
+                    <label for="classTextField">Class</label>
+                    <input type="text" class="form-control" id="classTextField" placeholder="Enter Class name" name="class" required>
                 </div>
                 <div class="form-group">
-                    <label for="nameTextField">Due Date</label>
-                    <input type="date" class="form-control" id="nameTextField" placeholder="Enter Title" name="Title" required>
+                    <label for="dateField">Due Date</label>
+                    <input type="date" class="form-control" id="dateField" name="duedate" required>
                 </div>
                 <div class="form-group">
-                    <label for="nameTextField">Due Date</label>
-                    <textarea class="form-control" id="descriptionTextArea" placeholder="Enter the Description" name="Description" required></textarea>
+                    <label for="descriptionTextArea">Description</label>
+                    <textarea class="form-control" id="descriptionTextArea" placeholder="Enter the Description" name="description" required></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="nameTextField">Estimated completion time</label>
-                    <input type="number" class="form-control" id="nameTextField" placeholder="Enter number(hours)" name="Title" required>
+                    <label for="compNumberField">Estimated completion time</label>
+                    <input type="number" class="form-control" id="compNumberField" placeholder="Enter number(hours)" name="estTimeToComplete" required>
                 </div>
                 <button class="btn btn-primary" type="submit">Add Ticket<i class="fas fa-plus-circle"></i></button>  
                 <a href="/tickets" class="btn btn-warning">Cancel<i class="fas fa-undo"></i></a>    
