--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <!-- Navbar - Carson --> 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/"> <i class="fa-solid fa-ticket"></i> Ticketing Web Application </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,7 +8,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
-          li class="nav-item">
+          <li class="nav-item">
             <% if(title=="Home") { %>
               <a class="nav-link active" href="/">
             <% } else {%>
