--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -2,7 +2,7 @@
 <%- include('partials/header.ejs') %>
 <%- include('partials/navbar.ejs') %>
 
-<div class="container text-center my-5">
+<div id="wrapper">
     <h1>Welcome to the Assignment Tracker Application!</h1>
     <a href="/tickets/add" class="btn btn-primary btn-lg m-2">Create New Assignment</a>
     <a href="/tickets" class="btn btn-primary btn-lg m-2">Manage Active Assignments</a>
