--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -3,6 +3,9 @@
 <%- include('partials/navbar.ejs') %>
 
 <div id="wrapper">
+    
+        <img src="PurpleBanner.jpg">
+    
     <h1>Welcome to the Assignment Tracker Application!</h1>
     <a href="/tickets/add" class="btn btn-primary btn-lg m-2">Create New Assignment</a>
     <a href="/tickets" class="btn btn-primary btn-lg m-2">Manage Active Assignments</a>
