--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"> <i class="fa-solid fa-ticket"></i> Assignment Tracker </a>
+      <a class="navbar-brand" href="/"> <i class="fa-brands fa-atlassian"></i> Assignment Tracker </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,7 +22,7 @@
             <% } else {%>
               <a class="nav-link" href="/tickets">
             <% } %>  
-            <i class="fa-solid fa-ticket"></i> View Active Assignments </a>
+            <i class="fa-solid fa-list-check"></i> View Active Assignments </a>
           </li>
           <li class="nav-item">
             <% if(title=="Add") { %>
@@ -30,7 +30,7 @@
             <% } else {%>
               <a class="nav-link" href="/add">  
             <% } %>       
-            <i class="fa-regular fa-square-plus"></i>Add New Assignment</a>
+            <i class="fa-regular fa-square-plus"></i> Add New Assignment</a>
           </li>
         </ul>
       </div>
