--- a/server/views/tickets/edit.ejs
+++ b/server/views/tickets/edit.ejs
@@ -1,10 +1,12 @@
 <!-- Edit - Carson -->
 <%- include ../Partials/header.ejs%>
 <%- include ../Partials/navbar.ejs%>
+<div id = "wrapper">
+<section id="large">
 <div class="container"></div>
     <div class="row">
         <div class="offset-md-3 col-md-6">
-            <h1><%= title %></h1>
+            <h1>Edit Active Assignment</h1>
             <form class="form" method="POST">
                 <div class="form-group">
                     <label for="nameTextField">Assignment Title</label>
@@ -26,10 +28,11 @@
                     <label for="compNumberField">Estimated completion time</label>
                     <input type="number" class="form-control" id="compNumberField" placeholder="Enter number(hours)" name="estTimeToComplete" value="<%= Assignment.estTimeToComplete %>"  required>
                 </div>
-                <button class="btn btn-primary" type="submit">Add Ticket<i class="fas fa-plus-circle"></i></button>  
-                <a href="/tickets" class="btn btn-warning">Cancel<i class="fas fa-undo"></i></a>    
+                <button class="btn btn-success" type="submit">Add Assignment<i class="fas fa-plus-circle"></i></button>  
+                <a href="/tickets" class="btn btn-danger">Cancel<i class="fas fa-undo"></i></a>    
             </form>
         </div>
     </div>
+</section>
 </div>
 <%- include ../Partials/footer.ejs%>
