--- a/server/views/tickets/list.ejs
+++ b/server/views/tickets/list.ejs
@@ -7,8 +7,8 @@
     <div class="row">      
         <div class="offset-md-1 col-md-10">
             <h1>Active Assignments</h1>
-            <h2> <a href="/tickets/add" class="btn btn-primary" role="button">
-                <i class="fas fa-plus-circle"></i> Add Assignment
+            <h2> <a href="/tickets/add" class="btn btn-success" role="button">
+                <i class="fa-regular fa-square-plus"></i> Add Assignment
             </a></h2>
             <div class="row">
             <% for (let count = 0; count < AssignmentList.length; count++) { %>
