--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,7 +1,5 @@
-<%- include ./partials/header.ejs %>
-<%- include ./partials/navbar.ejs %>
-
+<%- include partials/header.ejs %>
+<%- include partials/navbar.ejs %>
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
-
 <%- include ./partials/footer.ejs %>
