--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,7 +1,7 @@
-<!-- Footer - Dev -->
 <footer>
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
-    <h6 class="navbar-text">&copy; Copyright 2024. All rights reserved</h6>
+    <h6 class="navbar-text">&copy; Copyright 2024. All rights reserved<br>
+    Created by Carson Black</h6>
   </nav>
   </footer>
 </body>
