--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -1,5 +1,3 @@
-<!-- Navbar - Carson --> 
-
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/"> <i class="fa-brands fa-atlassian"></i> Assignment Tracker </a>
@@ -18,9 +16,9 @@
           </li>
           <li class="nav-item">
             <% if(title=="List") { %>
-              <a class="nav-link active" href="/tickets">
+              <a class="nav-link active" href="/assignments">
             <% } else {%>
-              <a class="nav-link" href="/tickets">
+              <a class="nav-link" href="/assignments">
             <% } %>  
             <i class="fa-solid fa-list-check"></i> View Active Assignments </a>
           </li>
