--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="@fortawesome/fontawesome-free/css/all.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
 <script src="/Script/app.js"></script>
