--- a/server/views/assignments/add.ejs
+++ b/server/views/assignments/add.ejs
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
-            <h1>Add New Assignment <i class="fa-regular fa-square-plus"></i></h1>
+            <h1><i class="fa-regular fa-square-plus"></i>Add New Assignment</h1>
             <form class="form" method="POST" action="/assignments/add">
                 <div class="form-group">
                     <label for="nameTextField">Assignment Title</label>
