--- a/server/views/assignments/edit.ejs
+++ b/server/views/assignments/edit.ejs
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
-            <h1>Edit Active Assignment <i class="fas fa-pencil-alt"></i></h1>
+            <h1><i class="fas fa-pencil-alt"></i> Edit Active Assignment</h1>
             <form class="form" method="POST">
                 <div class="form-group">
                     <label for="nameTextField">Assignment Title</label>
