--- a/server/views/assignments/list.ejs
+++ b/server/views/assignments/list.ejs
@@ -3,6 +3,7 @@
 <div id = "wrapper">
 <section id = "large">
 <main class="container">
+     <!-- Create a Card based layout using grid and card bootstrap elements-->
     <div class="row">      
         <div class="offset-md-1 col-md-10">
             <h1><i class="fa-solid fa-list"></i> Active Assignments</h1>
